fixed overflow with word title

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -40,10 +40,7 @@
     --primary: #395B64;
     --secondary: #32464a;
     --text-color: #E7F6F2;
-    background-color: #2C3333;
     color: #E7F6F2;
-
-
 }
 
 
